--- a/3. Basic Data Structure.ipynb
+++ b/3. Basic Data Structure.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 199,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,10 @@
     "         \n",
     "    def peek(self):\n",
     "        '''return the top item from stack but does not remove it'''\n",
-    "        return self._items[len(self._items)-1]\n",
+    "        if len(self._items) > 0:\n",
+    "            return self._items[len(self._items)-1]\n",
+    "        else:\n",
+    "            raise ValueError('Stack is empty')\n",
     "    \n",
     "    def __contains__(self, item):\n",
     "        return item in self._items\n",
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 200,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#the idea behind the paren checking is that\n",
+    "#the symbol to be popped out must matches the last inserted opposite symbol\n",
+    "\n",
+    "#for exmaple: if we are to pop { , the symbol we are "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {
     "collapsed": true
    },
@@ -112,19 +129,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 202,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parenChecker('())')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def test():\n",
-    "    a = 45"
+    "#problem ;balanced checker with all {}[] and ()\n",
+    "\n",
+    "def opposite_match(to_match, match):\n",
+    "    '''a function that checks the opposite parathesis\n",
+    "        Example : if to_match== [\n",
+    "        then match must be ] and the function must return true'''\n",
+    "    to_matches = list('([{')\n",
+    "    matches = list(')]}')\n",
+    "    \n",
+    "    return to_matches.index(to_match) == matches.index(match)\n",
+    "    \n",
+    "def checker(symbols):\n",
+    "    \n",
+    "    s = Stack()\n",
+    "    balanced = True\n",
+    "    for symbol in symbols:\n",
+    "        \n",
+    "        if symbol in '{[(':\n",
+    "            \n",
+    "            s.push(symbol)\n",
+    "        elif symbol in '}])' and not s.is_empty() and opposite_match(s.peek(), symbol) :\n",
+    "            #if stack is not empty and symbol to be popped out is opposite of the sybol \n",
+    "            #for example : {}\n",
+    "            #then symbol is popped only when symbol to be popped out of the stack matches the symbol that causes the popping\n",
+    "            s.pop()\n",
+    "            \n",
+    "        else:\n",
+    "            \n",
+    "            balanced = False\n",
+    "            \n",
+    "    return balanced and s.is_empty()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 208,
    "metadata": {
     "collapsed": false
    },
@@ -132,21 +201,21 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.test>"
+       "True"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test"
+    "checker('{}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 209,
    "metadata": {
     "collapsed": false
    },
@@ -154,21 +223,21 @@
     {
      "data": {
       "text/plain": [
-       "4374079688"
+       "True"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "id(test)"
+    "checker('{()}{}{}{}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false
    },
@@ -176,54 +245,21 @@
     {
      "data": {
       "text/plain": [
-       "['__annotations__',\n",
-       " '__call__',\n",
-       " '__class__',\n",
-       " '__closure__',\n",
-       " '__code__',\n",
-       " '__defaults__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__get__',\n",
-       " '__getattribute__',\n",
-       " '__globals__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__kwdefaults__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__name__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__qualname__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__']"
+       "False"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(test)"
+    "checker('{}{})')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 212,
    "metadata": {
     "collapsed": false
    },
@@ -231,195 +267,16 @@
     {
      "data": {
       "text/plain": [
-       "<code object test at 0x104b63e40, file \"<ipython-input-120-6f970b9a5452>\", line 1>"
+       "True"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.__code__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "function"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.__class__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "setattr(test, 'er', 'asdsad')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.test>"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'asdsad'"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.er"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__annotations__',\n",
-       " '__call__',\n",
-       " '__class__',\n",
-       " '__closure__',\n",
-       " '__code__',\n",
-       " '__defaults__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__get__',\n",
-       " '__getattribute__',\n",
-       " '__globals__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__kwdefaults__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__name__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__qualname__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'er']"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'er': 'asdsad'}"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.__dict__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Test:\n",
-    "    def __init__(self):\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "te"
+    "checker('{}{}[]')"
    ]
   }
  ],
