--- a/3. Basic Data Structure.ipynb
+++ b/3. Basic Data Structure.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,10 @@
     "#the idea behind the paren checking is that\n",
     "#the symbol to be popped out must matches the last inserted opposite symbol\n",
     "\n",
-    "#for exmaple: if we are to pop { , the symbol we are "
+    "#for exmaple: if we are to pop { , the symbol we are comparing must\n",
+    "#be }, only then we are allowed to pop the symbol\n",
+    "\n",
+    "#and also we should make sure that symbol to be popped is there isn the stack"
    ]
   },
   {
@@ -278,9 +281,385 @@
    "source": [
     "checker('{}{}[]')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#QUEUE ABSTRACT DATA TYPE\n",
+    "#queue abstract data type is defined by following operation\n",
+    "\n",
+    "#enque() causes the item to be pushed to the infront of the list\n",
+    "#dequeu() pops the first item that was inserted into the data structure\n",
+    "#size() return the size of the list\n",
+    "#is_empty() returns if strucure is empty\n",
+    "#Enque() creates a new Enque instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##Implementation of queue\n",
+    "class Queue(object):\n",
+    "    \n",
+    "    def __init__(self, iterable=None):\n",
+    "        self._list = list(iterable) if iterable else []\n",
+    "        \n",
+    "    def enque(self, item):\n",
+    "        #adds the item to the front of queue\n",
+    "        self._list.insert(0, item)\n",
+    "        \n",
+    "    def deque(self):\n",
+    "        #pops of thitem from the queue\n",
+    "        if len(self._list) > 0:\n",
+    "            return self._list.pop()\n",
+    "        else:\n",
+    "            raise Exception('Queue is empty')\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return len(self._list)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return ', '.join(str(item) for item in self._list)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "q = Queue([4,5,6,78])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4, 5, 6, 78"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "q.enque(45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45, 4, 5, 6, 78"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.deque()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45, 4, 5, 6"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#HOt potato simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def circulation_simulation(items , cycle):\n",
+    "    q = Queue(items)\n",
+    "    while True:\n",
+    "        if q.size() == 1:\n",
+    "            break\n",
+    "        for i in range(cycle):\n",
+    "            #take the last item from the queue\n",
+    "            item = q.deque()\n",
+    "            #insert the last item that was poped to the start of the queue\n",
+    "            q.enque(item)\n",
+    "        #after the first cycle remove the item in the last of the queue\n",
+    "        q.deque()\n",
+    "    return q.deque(), q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(34, )"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circulation_simulation((i for i in range(40)),7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Task(object):\n",
+    "    def __init__(self, pages, time_stamp):\n",
+    "        self.pages = pages\n",
+    "        self.time_stamp = time_stamp\n",
+    "        \n",
+    "    def get_pages(self):\n",
+    "        return self.pages\n",
+    "    \n",
+    "    def get_time_stamp(self):\n",
+    "        return self.time_stamp\n",
+    "    \n",
+    "    def get_wait_time(self, current_time):\n",
+    "        return current_time - self.time_stamp\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from random import randrange\n",
+    "class Printer(object):\n",
+    "    \n",
+    "    def __init__(self, ppm):\n",
+    "        self.ppm = ppm\n",
+    "        self.task = None\n",
+    "        self.time_remaining = 0\n",
+    "        \n",
+    "    def set_task(self, task):\n",
+    "        self.task = task\n",
+    "        self.time_remaining = randrange(1, 20)\n",
+    "        \n",
+    "    def tick(self):\n",
+    "        #tick the time_remaiingn to 0 if there is a task \n",
+    "        \n",
+    "        if self.task:\n",
+    "            self.time_remaining -= 1\n",
+    "    \n",
+    "    #check to see if the task is complete\n",
+    "    def is_complete(self):\n",
+    "        return self.time_remaining <= 0\n",
+    "        \n",
+    "    def has_task(self):\n",
+    "        return self.task != None\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#simulation of printinh task\n",
+    "\n",
+    "from random import randrange\n",
+    "def simulation(printer, total_time):\n",
+    "    tasks = Queue()\n",
+    "    waiting_times = []\n",
+    "    for current_second in range(total_time):\n",
+    "        #for every second in total_time\n",
+    "        \n",
+    "        #create a random new task in every 180 seconds and add it to the queue\n",
+    "        if randrange(4) == 3:\n",
+    "            tasks.enque(Task(randrange(20), current_second))\n",
+    "            \n",
+    "        if not printer.has_task() and tasks.size()>0:\n",
+    "            printer.set_task(tasks.deque())\n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        #increment the time every second for the current running task\n",
+    "        \n",
+    "        \n",
+    "        #check if the task is complete \n",
+    "        if printer.is_complete():\n",
+    "            #add the waiting time to the list for the task\n",
+    "            wait_time = printer.task.get_wait_time(current_second)\n",
+    "            waiting_times.append(wait_time)\n",
+    "            \n",
+    "            #delete the task from the printer\n",
+    "            printer.task = None\n",
+    "            \n",
+    "            #now add the new task\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "        printer.tick()\n",
+    "        \n",
+    "    average_time = sum(waiting_times)/ len(waiting_times)\n",
+    "    return 'The average time for {!r} is {!r} and remaining tasks is {!r}'.format(len(waiting_times), average_time, tasks.size())    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'get_wait_time'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-177-d14657ee86b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtotal_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m36000\u001b[0m \u001b[0;31m#60 minutes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprinter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-176-cc86f6c245d7>\u001b[0m in \u001b[0;36msimulation\u001b[0;34m(printer, total_time)\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mprinter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_complete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;31m#add the waiting time to the list for the task\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m             \u001b[0mwait_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprinter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_wait_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_second\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m             \u001b[0mwaiting_times\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get_wait_time'"
+     ]
+    }
+   ],
+   "source": [
+    "#create a 20 simulation\n",
+    "printer = Printer(122)\n",
+    "total_time = 36000 #60 minutes\n",
+    "for i in range(20):\n",
+    "    print(simulation(printer, total_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randrange(4)"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
